--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="../004.Lesson_2/L4_2.js"></script>
+  <script src="../L4_2.js"></script>
 </body>
 </html>
